--- a/index.html
+++ b/index.html
@@ -7,6 +7,50 @@
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
-    <h1>Hello world</h1>
+    <header>
+      <a href="">Projects</a>
+      <a href="">About</a>
+      <a href="">Contact</a>
+
+      <h1>Meisner</h1>
+      <p>North Kawartha, Ontario, Canada | 1616 sqft</p>
+
+      <h2>Modules</h2>
+      <p>6.5</p>
+
+      <h2>Structural Engineering</h2>
+      <p>Blackwell</p>
+
+      <h2>Photography</h2>
+      <p>Revelateur Studio</p>
+
+      <a href="">View Floorplan</a>
+    </header>
+    <main>
+      <p>
+        Replacing a three season cottage that has been in the family for
+        generations, this MAFCOhouse is a four season home with extensive views
+        from almost every side. The living space and master bedroom share the
+        sheer glass lake elevation, while a large bank of windows to the rear
+        provides views and transparency through the cottage.
+      </p>
+
+      <p>
+        Large roof overhangs and big decks to front and rear connect with the
+        landscape and encourage outdoor living. Guest bedrooms are located in a
+        separate wing, connected via a corridor incorporating an office space in
+        this compact MAFCO design.
+      </p>
+    </main>
+
+    <footer>
+      <a href="">Back to projects</a>
+
+      <h2>A architectes</h2>
+      <p>Ontario, Canada</p>
+
+      <h2>Sources</h2>
+      <a href="">https://mafcohouse.com</a>
+    </footer>
   </body>
 </html>
