--- a/index.html
+++ b/index.html
@@ -5,28 +5,44 @@
     <title>Meisner</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
-      <a href="">Projects</a>
-      <a href="">About</a>
-      <a href="">Contact</a>
+      <div class="navigation">
+        <a href="#project">Projects</a>
+        <a href="#about">About</a>
+        <a href="#contact">Contact</a>
+      </div>
 
       <h1>Meisner</h1>
       <p>North Kawartha, Ontario, Canada | 1616 sqft</p>
 
-      <h2>Modules</h2>
-      <p>6.5</p>
+      <div>
+        <h2>Modules</h2>
+        <p>6.5</p>
 
-      <h2>Structural Engineering</h2>
-      <p>Blackwell</p>
+        <h2>Structural Engineering</h2>
+        <p>Blackwell</p>
 
-      <h2>Photography</h2>
-      <p>Revelateur Studio</p>
+        <h2>Photography</h2>
+        <p>Revelateur Studio</p>
 
-      <a href="">View Floorplan</a>
+        <a href="">View Floorplan</a>
+      </div>
     </header>
+
     <main>
+      <img
+        src="_consigne/images/01-17030-Mafco-Fall-10.jpg"
+        alt="intérieur de maison"
+        id="project"
+      />
       <p>
         Replacing a three season cottage that has been in the family for
         generations, this MAFCOhouse is a four season home with extensive views
@@ -34,23 +50,31 @@
         sheer glass lake elevation, while a large bank of windows to the rear
         provides views and transparency through the cottage.
       </p>
-
+      <img
+        src="_consigne/images/02-17030-Mafco-Fall-9.jpg"
+        alt="intérieur de maison"
+      />
       <p>
         Large roof overhangs and big decks to front and rear connect with the
         landscape and encourage outdoor living. Guest bedrooms are located in a
         separate wing, connected via a corridor incorporating an office space in
         this compact MAFCO design.
+        <img
+          src="_consigne/images/03-17030-Mafco-Fall-11.jpg"
+          alt="intérieur de maison"
+        />
+        <a href="#project">Back to projects</a>
       </p>
     </main>
 
     <footer>
-      <a href="">Back to projects</a>
-
-      <h2>A architectes</h2>
+      <h2 id="about">A architectes</h2>
       <p>Ontario, Canada</p>
 
-      <h2>Sources</h2>
-      <a href="">https://mafcohouse.com</a>
+      <h2 class="sources" id="contact">Sources</h2>
+      <a href="https://mafcohouse.com" target="_blank">
+        https://mafcohouse.com</a
+      >
     </footer>
   </body>
 </html>
