réglage css du texte

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </div>
 
       <h1>Meisner</h1>
-      <p>North Kawartha, Ontario, Canada | 1616 sqft</p>
+      <p class="subtitle">North Kawartha, Ontario, Canada | 1616 sqft</p>
 
       <div>
         <h2>Modules</h2>
