--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
         landscape and encourage outdoor living. Guest bedrooms are located in a
         separate wing, connected via a corridor incorporating an office space in
         this compact MAFCO design.
-        <img
-          src="_consigne/images/03-17030-Mafco-Fall-11.jpg"
-          alt="intérieur de maison"
-        />
-        <a href="#project">Back to projects</a>
       </p>
+      <img
+        src="_consigne/images/03-17030-Mafco-Fall-11.jpg"
+        alt="intérieur de maison"
+      />
+      <div><a href="#project">Back to projects</a></div>
     </main>
 
     <footer>
